<resources>
    <string name="app_name">MyHosp</string>
    <string name="facebook_app_id">263328415756486</string>
    <string name="fb_login_protocol_scheme">fb263328415756486</string>
    <string name="facebook_application_id" translatable="false">facebook_app_id</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb_login_protocol_scheme</string>
    <string name="menu_title_exit" translatable="false">Вийти</string>
    <string name="menu_title_massage" translatable="false">Повідомлення</string>
    <string name="msg_token_fmt">91053362747836850</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hospitallist_strings_ua">Cписок лікарень</string>
    <string name="doctrolist_strings_ua">Cписок лікарів</string>
    <string name="profile_strings_ua">Профіль лікаря</string>
    <string name="srch_string">Пошук лікаря</string>


    />


</resources>