<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_logo"
        android:title="@string/srch_string"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/profile"
        app:showAsAction="never"
        android:title="" />

    <item
        android:id="@+id/massages"
        app:showAsAction="never"
        android:title="@string/menu_title_massage" />

    <item
        android:id="@+id/singoutitem"
        app:showAsAction="never"
        android:title="@string/menu_title_exit" />
</menu>