<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragmentHospitalList">
    <fragment
        android:id="@+id/fragmentHospitalList"
        android:name="com.opylypiv.myhosp.FragmentHospitalList"
        android:label="@string/hospitallist_strings_ua"
        tools:layout="@layout/fragment_hospital_list">
        <action
            android:id="@+id/action_fragmentHospitalList2_to_fragmentDoctorList"
            app:destination="@id/fragmentDoctorList"

            />

        <deepLink
            android:id="@+id/deepLink2"
            app:uri="yourhosp.com/hospital/id/" />
    </fragment>
    <fragment
        android:id="@+id/fragmentDoctorList"
        android:name="com.opylypiv.myhosp.FragmentDoctorList"
        android:label="@string/doctrolist_strings_ua">
        <action
            android:id="@+id/action_fragmentDoctorList_to_fragmentDoctorProfile"
            app:destination="@id/fragmentDoctorProfile" />
        <argument
            android:name="idhosp"
            app:argType="string" />
        <action
            android:id="@+id/action_fragmentDoctorList_to_fragmentHospitalList"
            app:destination="@id/fragmentHospitalList" />
        <deepLink
            android:id="@+id/deepLink"
            app:uri="yourhosp.com/doctor/id/" />

    </fragment>
    <fragment
        android:id="@+id/fragmentDoctorProfile"
        android:name="com.opylypiv.myhosp.FragmentDoctorProfile"
        android:label="@string/profile_strings_ua"
        tools:layout="@layout/fragment_doctor_profile" />
    <activity
        android:id="@+id/signInActivity"
        android:name="com.opylypiv.myhosp.SignInActivity"
        android:label="activity_sign_in"
        tools:layout="@layout/activity_sign_in" />

</navigation>